# elgato-key-light-linux

./: .gitignore  Makefile  README.md  keylights-tray.spec  meson.build  meson.options
.github/workflows/: build-packages.yml  build-rpm.yml
debian/: changelog  control  copyright  postinst
packaging/arch/: PKGBUILD  keylights-tray.install
src/: avahibrowser.cpp  avahibrowser.h  controlwindow.cpp  controlwindow.h  httptransport.cpp  httptransport.h  keylight.h  lightmanager.cpp  lightmanager.h  main.cpp  trayapp.cpp  trayapp.h  usbneo.cpp  usbneo.h  version.h.in
tests/: test_framing.cpp
tray/: keylights-tray.desktop  keylights-tray.py  lights.py  usbneo.py
udev/: 70-keylights-tray.rules
